--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-sympy
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-pydantic==2.6.1
-python-multipart==0.0.9
+sympy>=1.14
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.1
+pydantic>=2.6.1
+python-multipart>=0.0.9
